--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "publish": "npm publish --access public"
+    "deploy": "npm publish --access public"
   },
   "devDependencies": {
     "@stencil/core": "^1.7.5"
