--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boaterbase/bb-components",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "BoaterBase Web Components",
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "@stencil/router": "^1.0.1",
+    "isomorphic-unfetch": "^3.0.0",
     "slugify": "^1.4.0"
   }
 }
