--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boaterbase/bb-components",
-  "version": "0.1.1",
+  "version": "0.1.8",
   "description": "BoaterBase Web Components",
   "repository": {
     "type": "git",
@@ -28,12 +28,13 @@
     "deploy": "npm publish --access public"
   },
   "devDependencies": {
-    "@stencil/core": "^1.8.11"
+    "@stencil/core": "^1.9.2",
+    "@types/node": "^13.9.1"
   },
   "license": "MIT",
   "dependencies": {
     "@stencil/router": "^1.0.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "slugify": "^1.4.0"
+    "slugify": "^1.4.0",
+    "stencil-head": "^1.1.0"
   }
 }
