--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boaterbase/bb-components",
-  "version": "0.1.31",
+  "version": "0.1.32",
   "description": "BoaterBase Web Components",
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
   "dependencies": {
     "@stencil/router": "^1.0.1",
     "group-array": "^1.0.0",
+    "mapbox-gl": "^1.11.1",
     "natural-orderby": "^2.0.3",
     "slugify": "^1.4.0",
     "stencil-head": "^1.1.0"
