--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boaterbase/bb-components",
-  "version": "0.1.32",
+  "version": "0.1.34",
   "description": "BoaterBase Web Components",
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "deploy": "npm publish --access public"
+    "deploy": "npm version --no-git-tag-version patch && npm run build && npm publish --access public"
   },
   "devDependencies": {
     "@stencil/core": "^1.11.2",
